[gd_scene load_steps=12 format=2]

[ext_resource path="res://images/color.png" type="Texture" id=1]
[ext_resource path="res://scripts/colors.gd" type="Script" id=2]
[ext_resource path="res://scene/Line2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 2.0

[sub_resource type="CircleShape2D" id=2]
radius = 16.5616

[sub_resource type="CircleShape2D" id=3]
radius = 45.6775

[sub_resource type="CircleShape2D" id=4]
radius = 16.825

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 0.996078, 0.996078, 0.996078, 0, 1, 0.0234375, 0.961853, 1 )

[sub_resource type="GDScript" id=6]
script/source = "extends Line2D

export (NodePath) var body_scene
export (NodePath) var trail_body_scene
export var trail_length = 15
var body
var trail_body

func _ready():
	body = get_node(body_scene)
	trail_body = get_node(trail_body_scene)
	gradient.set_color(1,ColorN(all.purple_color))
	
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	global_rotation = 0
	global_position = Vector2(0,0)
	add_point(trail_body.global_position)
	while get_point_count() > trail_length:
		remove_point(0)
#	if body.trail_off == true:
##		print(\"trail_off\")
#		trail_length = lerp(trail_length,0,0.2)
	for colors in gradient.colors:
		if colors != ColorN(all.purple_color):
			gradient.set_color(1,ColorN(all.purple_color))
	pass

"

[sub_resource type="Animation" id=7]
resource_name = "zigzag"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -50, 0 ), Vector2( 50, 0 ), Vector2( 0, 0 ) ]
}

[node name="colors" type="RigidBody2D"]
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
linear_damp = 0.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="exit_screen" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
__meta__ = {
"_editor_description_": ""
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="enter_screen" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="miss" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="miss"]
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="line" parent="." instance=ExtResource( 3 )]
width = 10.0
gradient = SubResource( 5 )
texture_mode = 1
script = SubResource( 6 )
body_scene = NodePath("../Sprite")
trail_body_scene = NodePath("../Sprite")

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.827451, 0, 1, 1 )
scale = Vector2( 0.215, 0.215 )
texture = ExtResource( 1 )

[node name="rot" type="Sprite" parent="Sprite"]
visible = false
position = Vector2( 0, 500 )
rotation = -0.010472
texture = ExtResource( 4 )
offset = Vector2( -3.75696, -1.96976 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/zigzag = SubResource( 7 )
[connection signal="timeout" from="exit_screen" to="." method="_on_exit_screen_timeout"]
[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="timeout" from="enter_screen" to="." method="_on_enter_screen_timeout"]
[connection signal="body_entered" from="miss" to="." method="_on_miss_body_entered"]
[connection signal="body_exited" from="miss" to="." method="_on_miss_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
